docs/milestones/v0.92.1/evidence/cloud/aws-a/readbacks/regions/us-east-1-security-groups.json
{
    "SecurityGroups": [
        {
            "GroupId": "sg-0220ad0c1b60b7cf9",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-080be4051e99f513b",
            "SecurityGroupArn": "arn:aws:ec2:us-east-1:713332525889:security-group/sg-0220ad0c1b60b7cf9",
            "OwnerId": "713332525889",
            "GroupName": "default",
            "Description": "default VPC security group",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [
                        {
                            "UserId": "713332525889",
                            "GroupId": "sg-0220ad0c1b60b7cf9"
                        }
                    ],
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        }
    ]
}
